--- a/package.json
+++ b/package.json
@@ -13,21 +13,25 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "babel-preset-react": "^6.24.1",
+    "date-fns": "^2.30.0",
     "eslint-config-standard": "^16.0.3",
+    "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "i18next": "^21.6.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "json2csv": "^5.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-hook-form": "^7.46.2",
     "react-i18next": "^11.15.3",
     "react-input-mask": "^2.0.4",
     "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "4.0.3",
     "storybook": "^6.4.4",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5",
+    "typescript": "^5.2.2",
     "validator": "^13.7.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.18"
@@ -82,6 +86,9 @@
     "@storybook/node-logger": "^6.4.4",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.4",
+    "@types/axios": "^0.14.0",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "cz-ptbr-changelog": "^1.0.1",
